--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-5.31MB/s(Youtube:不良林), server: 89.31.126.31, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 波兰-956.8KB/s(Youtube:不良林), server: 217.30.10.67, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇫🇷 法国-601.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-847.6KB/s(Youtube:不良林), server: 89.31.126.31, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 香港-2.06MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-722.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 波兰-1.13MB/s(Youtube:不良林), server: 217.30.10.67, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 波兰-1.39MB/s(Youtube:不良林), server: 217.30.10.67, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇨🇳 中国-159.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-684.8KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-956.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-722.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 波兰-1.13MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-956.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-722.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 波兰-1.13MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-956.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-722.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 波兰-1.13MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
@@ -66,18 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-722.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-956.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-722.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 波兰-1.13MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-956.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-722.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 波兰-1.13MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-956.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-722.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 波兰-1.13MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 波兰-956.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇭🇰 香港-722.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 波兰-1.13MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
