--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-175.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-237.4KB/s(Youtube:不良林), server: 89.31.126.31, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 波兰-959.3KB/s(Youtube:不良林), server: 217.30.10.67, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇺🇸 美国-2.82MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 波兰-1.30MB/s(Youtube:不良林), server: 217.30.10.67, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇨🇳 中国-355.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-886.8KB/s(Youtube:不良林), server: 195.154.200.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-249.2KB/s(Youtube:不良林), server: 89.31.126.171, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-228.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇭🇰 (已存活8天)香港-3.68MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-619.0KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-955.9KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-979.9KB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.21MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-175.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-237.4KB/s(Youtube:不良林)
-      - 波兰-959.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 波兰-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-979.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-175.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-237.4KB/s(Youtube:不良林)
-      - 波兰-959.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 波兰-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-979.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-175.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-237.4KB/s(Youtube:不良林)
-      - 波兰-959.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 波兰-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-979.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活8天)香港-3.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-175.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-237.4KB/s(Youtube:不良林)
-      - 波兰-959.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 波兰-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-979.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-175.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-237.4KB/s(Youtube:不良林)
-      - 波兰-959.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 波兰-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-979.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-175.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-237.4KB/s(Youtube:不良林)
-      - 波兰-959.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 波兰-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-979.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-175.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-237.4KB/s(Youtube:不良林)
-      - 波兰-959.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 波兰-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-886.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-955.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-979.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
